# amplifier-bundle-a2a

./: CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  bundle.md
behaviors/: a2a.yaml
context/: a2a-instructions.md
docs/plans/: 2026-02-22-a2a-bundle-phase2-implementation.md  2026-02-22-a2a-bundle-phase3-implementation.md
modules/hooks-a2a-server/: pyproject.toml
modules/hooks-a2a-server/amplifier_module_hooks_a2a_server/: __init__.py  card.py  contacts.py  discovery.py  evaluation.py  injection.py  pending.py  registry.py  server.py
modules/hooks-a2a-server/tests/: test_approval.py  test_capability_scoping.py  test_card.py  test_contacts.py  test_discovery.py  test_evaluation.py  test_injection.py  test_mode_a.py  test_mode_c.py  test_pending.py  test_registry.py  test_server.py
modules/tool-a2a/: pyproject.toml
modules/tool-a2a/amplifier_module_tool_a2a/: __init__.py  client.py  discovery.py
modules/tool-a2a/tests/: test_client.py  test_discovery.py  test_outgoing_injection.py  test_outgoing_poller.py  test_tool_a2a.py
tests/: test_integration.py  test_integration_phase2.py  test_integration_phase3.py
