[project]
name = "amplifier-module-hooks-a2a-server"
version = "0.1.0"
description = "A2A protocol server — receives messages from remote agents"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9.0"]

[project.entry-points."amplifier.modules"]
hooks-a2a-server = "amplifier_module_hooks_a2a_server:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_a2a_server"]
