[project]
name = "amplifier-module-tool-a2a"
version = "0.1.0"
description = "A2A protocol client tool — send messages to remote agents"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9.0"]

[project.entry-points."amplifier.modules"]
tool-a2a = "amplifier_module_tool_a2a:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_a2a"]
